--- a/macro.tex
+++ b/macro.tex
@@ -46,9 +46,8 @@
 \titlecontents{section}[1em]{\zihao{-4}}{\contentslabel{1em}}{\hspace{-1em}}{\titlerule*[0.5pc]{$.$}\contentspage}
 \titlecontents{subsection}[3em]{\zihao{-4}}{\contentslabel{2em}}{\hspace{-2em}}{\titlerule*[0.5pc]{$.$}\contentspage}
 \titlecontents{subsubsection}[5em]{\zihao{-4}}{\contentslabel{3em}}{\hspace{-3em}}{\titlerule*[0.5pc]{$.$}\contentspage}
-\renewcommand{\contentsname}{目~录 }
-\usepackage{tocloft}
-\renewcommand{\cfttoctitlefont}{\hfill\zihao{2}\heiti}
+\renewcommand{\cfttoctitlefont}{\zihao{2}\heiti}
+\renewcommand{\contentsname}{\hfill 目~录\hfill}   
 \renewcommand{\cftaftertoctitle}{\hfill}
 
 % update references to Chinese style, font size and type can also be set here
