--- a/main.tex
+++ b/main.tex
@@ -29,10 +29,9 @@
 % important notes: if you find the ToC overflow one page, 
 % then add the following line before the overflowing section in main text 
 % \addtocontents{toc}{\protect\newpage\protect}
-
+{\pagestyle{plain}
 \tableofcontents
-\hfill
-\clearpage
+\clearpage}
 
 
 \pagenumbering{arabic}
