--- a/macro.tex
+++ b/macro.tex
@@ -20,7 +20,12 @@
 \usepackage{graphicx}
 \usepackage{enumitem}
 \usepackage{amsmath,amssymb}
-\numberwithin{figure}{section}  % numbering restarts at each section
+
+% numbering restarts at each section
+\numberwithin{figure}{section}  
+\numberwithin{table}{section}
+\numberwithin{equation}{section}
+
 \usepackage{xcolor,colortbl}
 \newcommand{\zw}[1]{\textcolor{cyan}{(Zhuowen: #1)}}
 \usepackage[capitalize]{cleveref}  % Support for easy cross-referencing
