Fix line spacing

--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,8 @@
 \input{macro}
 
 \begin{document}
+\setlength{\baselineskip}{20pt}
+
 \title{\hei\zihao{-2}\mytitle}
 \maketitle
 \thispagestyle{empty}
@@ -41,8 +43,8 @@
 
 % keywords
 \vspace{1em}\noindent
-\zihao{-3}\hei 关键词:
-\zihao{-4}\song 番茄炒蛋；辣椒
+{\zihao{-3}\hei 关键词:}
+{\zihao{-4}\song 番茄炒蛋；辣椒}
 \clearpage
 
 
@@ -52,8 +54,8 @@ This paper proposes a new cooking method of tomato scrambled eggs with pepper. I
 
 % keywords
 \vspace{1em}\noindent
-\zihao{-3}\hei Keywords:
-\zihao{-4}\songti \rm Tomato scrambled eggs; Pepper
+{\zihao{-3}\hei Keywords:}
+{\zihao{-4}\songti \rm Tomato scrambled eggs; Pepper}
 
 \clearpage
 
